# Entity: ECS registry/scheduling (Scheduler invokes plugin subsystem hooks)
set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
add_library(Entity STATIC Scheduler.cxx)
target_include_directories(Entity PUBLIC ${SOURCE_DIR})
target_link_libraries(Entity PUBLIC Plugin)
if(MSVC)
    target_compile_options(Entity PRIVATE /W0 /Zc:preprocessor)
    target_compile_definitions(Entity PRIVATE SOLSTICE_EXPORTS NOMINMAX WIN32_LEAN_AND_MEAN)
endif()
